2002-04-21  John Harper  <jsh@unfactored.org>

	More reorganization. Removed all mentions of viewports and
	viewport commands from the configurator, simplified workspace
	configuration, etc..

	* sawfish/wm/workspace.jl, sawfish/wm/viewport.jl,
	sawfish/wm/placement.jl, sawfish/wm/autoload.jl: 

	* sawfish/wm/commands/xterm.jl,
	sawfish/wm/commands/viewport-linear.jl,
	sawfish/wm/commands/viewport-extras.jl,
	sawfish/wm/commands/move-resize.jl,
	sawfish/wm/commands/groups.jl: 

	* sawfish/wm/ext/shade-hover.jl,
	sawfish/wm/ext/hide-dialogs.jl, sawfish/wm/ext/edge-flip.jl,
	sawfish/wm/ext/auto-raise.jl: 

	* sawfish/wm/gnome/menus.jl, sawfish/wm/gnome/integration.jl: 

	* sawfish/wm/state/iconify.jl: 

	* sawfish/wm/util/compat.jl, sawfish/wm/util/autoloader.jl: 

2002-04-20  John Harper  <jsh@unfactored.org>

	More slash and burning. Removed user levels (a failed
	experiment). Removed more options, etc

	* sawfish/wm/workspace.jl, sawfish/wm/windows.jl,
	sawfish/wm/stacking.jl, sawfish/wm/placement.jl,
	sawfish/wm/keymaps.jl, sawfish/wm/frames.jl,
	sawfish/wm/focus.jl, sawfish/wm/custom.jl,
	sawfish/wm/commands.jl, sawfish/wm/autoload.jl: 

	* sawfish/wm/commands/xterm.jl, sawfish/wm/commands/x-cycle.jl,
	sawfish/wm/commands/slide-window.jl,
	sawfish/wm/commands/size-window.jl,
	sawfish/wm/commands/raise-commands.jl,
	sawfish/wm/commands/move-resize.jl,
	sawfish/wm/commands/groups.jl, sawfish/wm/commands/describe.jl:

	* sawfish/wm/ext/window-history.jl, sawfish/wm/ext/tooltips.jl,
	sawfish/wm/ext/shade-hover.jl, sawfish/wm/ext/error-handler.jl,
	sawfish/wm/ext/edge-flip.jl, sawfish/wm/ext/auto-raise.jl,
	sawfish/wm/ext/audio-events.jl, sawfish/wm/ext/3d-hack.jl: 

	* sawfish/wm/placement/top-left.jl,
	sawfish/wm/placement/smart.jl: 

	* sawfish/wm/state/transient.jl, sawfish/wm/state/iconify.jl: 

	* sawfish/wm/util/play-audio.jl, sawfish/wm/util/nokogiri.jl,
	sawfish/wm/util/display-window.jl, sawfish/wm/util/compat.jl: 
