@@ -1,3 +1,10 @@
+2002-04-22  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/workspace.jl, sawfish/wm/viewport.jl,
+	sawfish/wm/state/wm-spec.jl: Fixed #74904, support
+	_NET_NUMBER_OF_DESKTOPS and _NET_DESKTOP_GEOMETRY client
+	messages
+
 2002-04-21  John Harper  <jsh@unfactored.org>
 
 	More reorganization. Removed all mentions of viewports and
